tests/proc-macro-tests/tests/expand/fail/panicking_derive_macro.err.txt
error: proc-macro derive panicked
 --> /tests/expand/fail/panicking_derive_macro.rs:4:10
  |
4 | #[derive(MyDerivePanics)]
  |          ^^^^^^^^^^^^^^
  |
  = help: message: test
error: could not compile `<CRATE>` (bin "<BIN>") due to 1 previous error
